# BLITZ

./: .dockerignore  .gitignore  BLITZ.spec  CONTRIBUTORS.md  DOCKER.md  Dockerfile  README.md  TODO.md  _t.asc  blitz.py  blitz_main.py  docker-compose.yml  profile_load.prof  profile_stats.txt  pyinstaller_command.md  pyproject.toml  settings.blitz  settings.blitz.RLLaft  settings.blitz.wSTLNj
.cursor/rules/: build-release.mdc  feature-freeze.mdc  language.mdc  pyinstaller.mdc
.github/workflows/: build.yml
_af/: f1.asc  f2.asc  f3.asc
_asc_test/: a.asc
_aux/: README.md
_aux/benchmarks/: bench_lut_percentile.py  bench_numba_full.py  bench_optimized.py  bench_result_cache.py  bench_sliding_mean.py  benchmark_background_subtraction.py  benchmark_multicore_load.py  benchmark_video_load.py  boot_bench.py  profile_load.py
_aux/scripts/: dicom_converter.py
_aux/tests/: test_ascii_converter.py  test_image_pipeline.py  test_lut.py  test_ops.py  test_sliding_mean_normalization.py  test_temp_file_security.py  verify_sliding_mean.py
benchmarks/: bench_optimized.py  bench_result_cache.py  bench_sliding_mean.py  benchmark_background_subtraction.py
blitz/: __init__.py  __main__.py  _cpu.py  app.py  boot_bench.py  lut_levels.py  resources.py  settings.py  stats.py  theme.py  tools.py
blitz/data/: __init__.py  filters.py  image.py  live.py  live_camera.py  load.py  ops.py  optimized.py  pca_algo.py  tools.py  web.py
blitz/layout/: __init__.py  bench_compact.py  bench_data.py  bench_sparklines.py  dialogs.py  filter_stack.py  isoline.py  main.py  parameters.py  pca.py  roi_mixin.py  rosee.py  simulated_live.py  tof.py  ui.py  viewer.py  widgets.py  winamp_mock.py
docker/: BLITZ.desktop  Dockerfile  README.md  docker-compose.yml  start-blitz.sh
docker/openbox/: autostart  menu.xml  rc.xml
docs/: ARCHITECTURE.md  LIVE_AND_MOCK.md  LOADING.md  MD_STATE.md  MERGE_ROI_LOADING.md  MERGE_ROI_REVIEW.md  MISSING_FEATURES.md  MULTICORE_AND_PROGRESS.md  NUMBA_CANDIDATES.md  OPTIMIZATION.md  SETTINGS.md  SOURCES_AND_VARIANTS.md  TEST_LUT_MANUAL.md  TIMELINE_AGGREGATION.md  Tabs_explained.md  VERIFICATION_REPORT.md  architecture.md  autograd_potential.md  benchmark_logic.md  build_workflow.md  extraction_envelopes.md  md_state.md  merge_roi_review.md  missing_features.md  monitoring_and_sensors.md  multicore_and_progress.md  optimization.md  pyinstaller_command.md  settings.md  smoke_test.md  sources_and_variants.md  tabs_explained.md  unravel_and_stores.md  verification_report.md  walkthrough.md
docs/PPTs/: BLITZ_Overview_V2.pptx  BLITZ_WOLKE_DPG25.pptx
resources/: resources.qrc
scripts/: benchmark_background_subtraction.py  boot_bench.py  dicom_converter.py  settings.blitz
tests/: bench_numba_full.py  test_image_pipeline.py  test_live.py  test_load.py  test_optimized_pipeline.py  test_pickle_security.py  test_resize_and_convert.py  test_settings.py  test_temp_file_security.py  verify_sliding_mean.py
(+5 files in other folders)
