[tool.poetry]
name = "BLITZ"
version = "1.3.1"
description = "Bulk Loading and Interactive Time series Zonal analysis"
authors = [
    "Richard Krieg <alienkrieg@gmail.com>",
    "Philipp Mattern <philipp.mattern@inp-greifswald.de>"
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.0.2"
opencv-python-headless = "^4.10.0.84"
natsort = "^8.4.0"
requests = "^2.32.3"
python-socketio = "^5.11.4"
psutil = "^6.1.0"
PyQt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
QDarkStyle = "^3.2.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
