[project]
name = "BLITZ"
version = "1.3.1"
description = "Bulk Loading and Interactive Time series Zonal analysis"
authors = [
    { name = "Richard Krieg", email = "alienkrieg@gmail.com" },
    { name = "Philipp Mattern", email = "mattern@mess.engineering" },
]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.2,<3",
    "opencv-python-headless>=4.10.0.84,<5",
    "PyQt5>=5.15.11,<6",
    "natsort>=8.4.0,<9",
    "requests>=2.32.3,<3",
    "python-socketio>=5.11.4,<6",
    "psutil>=6.1.0,<7",
    "pyqtgraph>=0.13.7,<0.14",
    "QDarkStyle>=3.2.3,<4",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0,<7", "pytest (>=9.0.2,<10.0.0)"]

[tool.uv]
constraint-dependencies = ["PyQt5-Qt5==5.15.2"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
